# LucidCamera_cpp

./: .gitignore  CMakeLists.txt  README.md  build_ffmpeg.sh  build_opencv.sh  main.cpp
